--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-toast": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "flowbite": "^3.1.2",
     "lucide-react": "^0.462.0",
-    "motion": "^12.0.0-alpha.2",
+    "motion": "^11.18.2",
     "next": "^15.0.3",
     "next-intl": "^3.25.3",
     "next-themes": "^0.4.3",
