--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "flowbite": "^3.1.2",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.462.0",
     "motion": "^11.18.2",
     "next": "^15.0.3",
