--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,15 +13,24 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",                              // ✅ أضف هذا السطر
+    "paths": {
+      "@/*": ["./src/*"],
+      "next/image": ["./node_modules/next/image"],
+      "next/*": ["./node_modules/next/*"]        // ✅ أضف هذا السطر
+    },
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.mjs"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "next.config.mjs"
+  ],
   "exclude": ["node_modules"]
 }
